# kirino

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  justfile
.github/workflows/: checks.yml  docs.yml  npm-release.yml  publish.yml
benches/: rbac.rs
docs/: lagrange.toml
examples/: auth_service.rs
scripts/utils/: logger.py
src/: error.rs  lib.rs  rbac.rs  test_utils.rs  utils.rs
src/auth/credential/: basic.rs  mod.rs  one_time.rs  service.rs
src/auth/identity/: anonymous.rs  basic.rs  service.rs  temporary.rs
src/auth/passport/: biological.rs  captcha.rs  dynamic_password.rs  key_pair.rs  mod.rs  oauth.rs  static_password.rs  temporary_whitelist.rs
src/database/: db_session.rs  memory.rs  pg_session.rs  sql.rs
src/invitation/: mod.rs  store.rs  token.rs  types.rs
src/models/: credential.rs  identity.rs  passport.rs
src/rbac/: audit.rs  cache.rs  compat.rs  engine.rs  identity_subject.rs  mod.rs  permission.rs  shared.rs  traits.rs
src/rbac/constraints/: policies.rs  store.rs  validator.rs
src/rbac/dynamic/: anomaly.rs  arbiter.rs  domain.rs  policy.rs  trust.rs  verdict.rs
src/rbac/hierarchy/: mod.rs
src/rbac/session/: mod.rs  pg.rs
src/rbac/store/: memory.rs  mod.rs  registry.rs
src/service/login/: mod.rs
src/service/register/: mod.rs
src/service/verify/: ca.rs  sso.rs
src/service/verify/biological/: web_authn.rs
src/service/verify/captcha/: third_party_iframe.rs
src/service/verify/verification/: code_store.rs  email.rs  sms.rs
src/service/verify/whitelist/: network_source.rs  previous_credential.rs
